2006-01-30  Adam Schreiber  <sadam@clemson.edu>
    * src/seahorse-key-properties.c:
    * src/seahorse-pgp-public-key-properties.glade: Correct 
    visibility and labels. (Bug #329151)

2006-01-29  Adam Schreiber  <sadam@clemson.edu>
    * src/seahorse-key-properties.c:
    * src/seahorse-pgp-public-key-properties.glade: Correct 
    visibility and labels.(Bug #329151)

2006-01-24  Adam Schreiber  <sadam@clemson.edu>
    * HACKING: updated file
    * Makefile.am: Added MAINTAINERS and HACKING to EXTRA_DIST
    * libseahorse/seahorse-pgp-key.c: Fix critical warning
    (Bug #328472)
    * plugins/nautilus/seahorse-pgp-preferences.desktop.in:
    * src/seahorse.desktop.in: Corrected desktop files
    (Bug #328457). Patch by Stephane Loeuillet.
    * data/seahorse.schemas.in: Made ASCII armouring the default
    (Bug # 321188)
    * src/seahorse-key-properties.c: Connected export signal to handler
    (Bug # 328469)
    * libseahorse/seahorse-pgp-key-op.c: Changed g_return_val_if_fail into
    an if statement. (Bug #328471)

2006-01-23  Nate Nielsen  <nielsen@memberwebs.com>

	* configure.in: Make avahi a soft dependency. 
	* configure.in: Fix problem with above commit. 
	See bug #328362
	
2006-01-23  Nate Nielsen  <nielsen@memberwebs.com>

	* Merged changes from seahorse-0-8 branch.

2006-01-23  Nate Nielsen  <nielsen@memberwebs.com>

	* seahorse-key-manager.c: Fixed warnings during Key Manager
	startup. Bug #327657
	
2006-01-22  Nate Nielsen  <nielsen@memberwebs.com>

	* configure.in: Made gedit plugin and panel applet soft
	dependencies.
	* libseahorse/seahorse-context.c: Builds properly without 
	keyserver support.
	
2006-01-16  Nate Nielsen  <nielsen@memberwebs.com>

    * configure.in:
    * daemon/seahorse-sharing.c:
    * libseahorse/seahorse-dns-sd.c:
    * libseahorse/seahorse-dns-sd.h:
    * libseahorse/seahorse-util.c:
    * libseahorse/seahorse-util.h: Moved DNS-SD code from 
    libhowl to Avahi. Bug #318707
    