@@ -502,12 +502,13 @@
 			      <child>
 				<widget class="GtkLabel" id="owner-name-label">
 				  <property name="visible">True</property>
+				  <property name="can_focus">True</property>
 				  <property name="label" translatable="yes">Jim Pharis</property>
 				  <property name="use_underline">False</property>
 				  <property name="use_markup">False</property>
 				  <property name="justify">GTK_JUSTIFY_LEFT</property>
 				  <property name="wrap">False</property>
-				  <property name="selectable">False</property>
+				  <property name="selectable">True</property>
 				  <property name="xalign">0</property>
 				  <property name="yalign">0.5</property>
 				  <property name="xpad">12</property>
@@ -552,12 +553,13 @@
 			      <child>
 				<widget class="GtkLabel" id="owner-email-label">
 				  <property name="visible">True</property>
+				  <property name="can_focus">True</property>
 				  <property name="label" translatable="yes">binbrain@gmail.com</property>
 				  <property name="use_underline">False</property>
 				  <property name="use_markup">False</property>
 				  <property name="justify">GTK_JUSTIFY_LEFT</property>
 				  <property name="wrap">False</property>
-				  <property name="selectable">False</property>
+				  <property name="selectable">True</property>
 				  <property name="xalign">0</property>
 				  <property name="yalign">0.5</property>
 				  <property name="xpad">12</property>
@@ -602,6 +604,7 @@
 			      <child>
 				<widget class="GtkLabel" id="owner-comment-label">
 				  <property name="visible">True</property>
+				  <property name="can_focus">True</property>
 				  <property name="label" translatable="yes">I use this key to sign legal 
 documents and school docs 
 that I need to sign</property>
@@ -609,7 +612,7 @@ that I need to sign</property>
 				  <property name="use_markup">False</property>
 				  <property name="justify">GTK_JUSTIFY_LEFT</property>
 				  <property name="wrap">True</property>
-				  <property name="selectable">False</property>
+				  <property name="selectable">True</property>
 				  <property name="xalign">0</property>
 				  <property name="yalign">0.5</property>
 				  <property name="xpad">12</property>
@@ -1082,12 +1085,13 @@ that I need to sign</property>
 			      <child>
 				<widget class="GtkLabel" id="details-id-label">
 				  <property name="visible">True</property>
+				  <property name="can_focus">True</property>
 				  <property name="label" translatable="yes">F324324</property>
 				  <property name="use_underline">False</property>
 				  <property name="use_markup">False</property>
 				  <property name="justify">GTK_JUSTIFY_LEFT</property>
 				  <property name="wrap">False</property>
-				  <property name="selectable">False</property>
+				  <property name="selectable">True</property>
 				  <property name="xalign">0</property>
 				  <property name="yalign">0.5</property>
 				  <property name="xpad">12</property>
@@ -1169,12 +1173,13 @@ that I need to sign</property>
 				  <child>
 				    <widget class="GtkLabel" id="details-algo-label">
 				      <property name="visible">True</property>
+				      <property name="can_focus">True</property>
 				      <property name="label" translatable="yes">DSA</property>
 				      <property name="use_underline">False</property>
 				      <property name="use_markup">False</property>
 				      <property name="justify">GTK_JUSTIFY_LEFT</property>
 				      <property name="wrap">False</property>
-				      <property name="selectable">False</property>
+				      <property name="selectable">True</property>
 				      <property name="xalign">0</property>
 				      <property name="yalign">0.5</property>
 				      <property name="xpad">0</property>
@@ -1225,12 +1230,13 @@ that I need to sign</property>
 				  <child>
 				    <widget class="GtkLabel" id="details-strength-label">
 				      <property name="visible">True</property>
+				      <property name="can_focus">True</property>
 				      <property name="label" translatable="yes">1024</property>
 				      <property name="use_underline">False</property>
 				      <property name="use_markup">False</property>
 				      <property name="justify">GTK_JUSTIFY_LEFT</property>
 				      <property name="wrap">False</property>
-				      <property name="selectable">False</property>
+				      <property name="selectable">True</property>
 				      <property name="xalign">0</property>
 				      <property name="yalign">0.5</property>
 				      <property name="xpad">0</property>
@@ -1291,13 +1297,14 @@ that I need to sign</property>
 				  <child>
 				    <widget class="GtkLabel" id="details-fingerprint-label">
 				      <property name="visible">True</property>
+				      <property name="can_focus">True</property>
 				      <property name="label" translatable="yes">3F23 A343 F456 9023 435F 
 B4C3 4349 0932 7854 3452</property>
 				      <property name="use_underline">False</property>
 				      <property name="use_markup">False</property>
 				      <property name="justify">GTK_JUSTIFY_LEFT</property>
 				      <property name="wrap">False</property>
-				      <property name="selectable">False</property>
+				      <property name="selectable">True</property>
 				      <property name="xalign">0</property>
 				      <property name="yalign">0.5</property>
 				      <property name="xpad">12</property>
@@ -1370,7 +1377,7 @@ B4C3 4349 0932 7854 3452</property>
 				  <property name="n_rows">2</property>
 				  <property name="n_columns">2</property>
 				  <property name="homogeneous">False</property>
-				  <property name="row_spacing">6</property>
+				  <property name="row_spacing">0</property>
 				  <property name="column_spacing">0</property>
 
 				  <child>
@@ -1404,12 +1411,13 @@ B4C3 4349 0932 7854 3452</property>
 				  <child>
 				    <widget class="GtkLabel" id="details-created-label">
 				      <property name="visible">True</property>
-				      <property name="label" translatable="yes">6/24/04</property>
+				      <property name="can_focus">True</property>
+				      <property name="label" translatable="yes">2005-12-25</property>
 				      <property name="use_underline">False</property>
 				      <property name="use_markup">False</property>
 				      <property name="justify">GTK_JUSTIFY_LEFT</property>
 				      <property name="wrap">False</property>
-				      <property name="selectable">False</property>
+				      <property name="selectable">True</property>
 				      <property name="xalign">0</property>
 				      <property name="yalign">0.5</property>
 				      <property name="xpad">0</property>
@@ -1458,22 +1466,64 @@ B4C3 4349 0932 7854 3452</property>
 				  </child>
 
 				  <child>
-				    <widget class="GtkLabel" id="details-expires-label">
+				    <widget class="GtkHBox" id="hbox47">
 				      <property name="visible">True</property>
-				      <property name="label" translatable="yes">6/28/10</property>
-				      <property name="use_underline">False</property>
-				      <property name="use_markup">False</property>
-				      <property name="justify">GTK_JUSTIFY_LEFT</property>
-				      <property name="wrap">False</property>
-				      <property name="selectable">False</property>
-				      <property name="xalign">0</property>
-				      <property name="yalign">0.5</property>
-				      <property name="xpad">0</property>
-				      <property name="ypad">0</property>
-				      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
-				      <property name="width_chars">-1</property>
-				      <property name="single_line_mode">False</property>
-				      <property name="angle">0</property>
+				      <property name="homogeneous">False</property>
+				      <property name="spacing">0</property>
+
+				      <child>
+					<widget class="GtkLabel" id="details-expires-label">
+					  <property name="visible">True</property>
+					  <property name="can_focus">True</property>
+					  <property name="label" translatable="yes">2005-12-29</property>
+					  <property name="use_underline">False</property>
+					  <property name="use_markup">False</property>
+					  <property name="justify">GTK_JUSTIFY_LEFT</property>
+					  <property name="wrap">False</property>
+					  <property name="selectable">True</property>
+					  <property name="xalign">0.5</property>
+					  <property name="yalign">0.5</property>
+					  <property name="xpad">0</property>
+					  <property name="ypad">0</property>
+					  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+					  <property name="width_chars">-1</property>
+					  <property name="single_line_mode">False</property>
+					  <property name="angle">0</property>
+					</widget>
+					<packing>
+					  <property name="padding">0</property>
+					  <property name="expand">False</property>
+					  <property name="fill">False</property>
+					</packing>
+				      </child>
+
+				      <child>
+					<widget class="GtkButton" id="details-calendar-button">
+					  <property name="border_width">6</property>
+					  <property name="visible">True</property>
+					  <property name="can_focus">True</property>
+					  <property name="relief">GTK_RELIEF_NORMAL</property>
+					  <property name="focus_on_click">True</property>
+					  <signal name="clicked" handler="on_details_calendar_button_clicked" last_modification_time="Fri, 30 Dec 2005 14:08:37 GMT"/>
+
+					  <child>
+					    <widget class="GtkImage" id="details-calendar-button-image">
+					      <property name="visible">True</property>
+					      <property name="icon_size">4</property>
+					      <property name="icon_name">stock_calendar</property>
+					      <property name="xalign">0.5</property>
+					      <property name="yalign">0.5</property>
+					      <property name="xpad">0</property>
+					      <property name="ypad">0</property>
+					    </widget>
+					  </child>
+					</widget>
+					<packing>
+					  <property name="padding">6</property>
+					  <property name="expand">False</property>
+					  <property name="fill">False</property>
+					</packing>
+				      </child>
 				    </widget>
 				    <packing>
 				      <property name="left_attach">1</property>
@@ -1481,7 +1531,7 @@ B4C3 4349 0932 7854 3452</property>
 				      <property name="top_attach">1</property>
 				      <property name="bottom_attach">2</property>
 				      <property name="x_options">fill</property>
-				      <property name="y_options"></property>
+				      <property name="y_options">fill</property>
 				    </packing>
 				  </child>
 				</widget>
@@ -2042,7 +2092,7 @@ Ultimate</property>
 				      <signal name="clicked" handler="on_details_date_button_clicked" last_modification_time="Mon, 19 Sep 2005 17:52:34 GMT"/>
 
 				      <child>
-					<widget class="GtkAlignment" id="alignment7">
+					<widget class="GtkAlignment" id="alignment18">
 					  <property name="visible">True</property>
 					  <property name="xalign">0.5</property>
 					  <property name="yalign">0.5</property>
@@ -2054,16 +2104,16 @@ Ultimate</property>
 					  <property name="right_padding">0</property>
 
 					  <child>
-					    <widget class="GtkHBox" id="hbox15">
+					    <widget class="GtkHBox" id="hbox48">
 					      <property name="visible">True</property>
 					      <property name="homogeneous">False</property>
 					      <property name="spacing">2</property>
 
 					      <child>
-						<widget class="GtkImage" id="image9">
+						<widget class="GtkImage" id="image30">
 						  <property name="visible">True</property>
-						  <property name="stock">gtk-edit</property>
 						  <property name="icon_size">4</property>
+						  <property name="icon_name">stock_calendar</property>
 						  <property name="xalign">0.5</property>
 						  <property name="yalign">0.5</property>
 						  <property name="xpad">0</property>
@@ -2077,9 +2127,9 @@ Ultimate</property>
 					      </child>
 
 					      <child>
-						<widget class="GtkLabel" id="label38">
+						<widget class="GtkLabel" id="label89">
 						  <property name="visible">True</property>
-						  <property name="label" translatable="yes">Date</property>
+						  <property name="label" translatable="yes">Expire</property>
 						  <property name="use_underline">True</property>
 						  <property name="use_markup">False</property>
 						  <property name="justify">GTK_JUSTIFY_LEFT</property>
