@@ -1,3 +1,12 @@
+2006-01-31  Adam Schreiber  <sadam@clemson.edu>
+    * src/seahorse-key-properties.glade:
+    * src/seahorse-key-properties.c:
+    * src/seahorse-expires.glade:
+    * src/seahorse-expires.c: Fixes expiration dialogs
+    and makes data labels selectable. (Bug #325239) 
+    (Bug #329298)
+    
+
 2006-01-30  Adam Schreiber  <sadam@clemson.edu>
     * src/seahorse-key-properties.c:
     * src/seahorse-pgp-public-key-properties.glade: Correct 
